Removed the line mentionning:
This page uses Google Analytics to collect audience log, you can disable it with NoScript (among other solutions).

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -11,8 +11,9 @@
 {% block doctype %}<!DOCTYPE html>{% endblock %}
 
 {% block extrahead %}
-<!-- This page is © Lilian Besson, 2011-2017.
-    I'm a PhD student in Reinforcement Learning (Mathematics and Computer Science), at Centrale-Supelec Rennes.
+<!-- This page is © Lilian Besson, 2011-2021.
+    I'm a professor of computer science, at ENS Rennes in France.
+    PhD in Reinforcement Learning (Mathematics and Computer Science) in 2019, from Centrale-Supelec Rennes and Inria Lille.
     This page is part of my personal web pages, generated with Sphinx.
     Those pages are hosted on the Crans network, http://perso.crans.org/besson; -->
 
@@ -77,9 +78,9 @@
     <a href="https://bitbucket.org/lbesson/web-sphinx/changeset/master" title="Sur bitbucket !">Last changes</a>.
     A remark? A question? Please use this form
     <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>!<br>
-    This page uses <a href="https://analytics.google.com/">Google Analytics</a>
+    <!-- This page uses <a href="https://analytics.google.com/">Google Analytics</a>
     to collect audience log, you can disable it with
-    <a href="http://noscript.net/getit">NoScript</a> (among other solutions).
+    <a href="http://noscript.net/getit">NoScript</a> (among other solutions). -->
     </p>
 
     <br>
