Update index, callme, mes-outils-preferes

--- a/README.html
+++ b/README.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"/><title>Lilian Besson's Web Pages - using Sphinx</title></head><body><xmp>
 # [Lilian Besson](https://bitbucket.org/lbesson/)'s Web Pages - using Sphinx
-[My web pages](http://perso.crans.org/besson/) are currently generated with [Sphinx Doc](http://sphinx-doc.org) (*v1.5+*).
+[My web pages](https://perso.crans.org/besson/) are currently generated with [Sphinx Doc](http://sphinx-doc.org) (*v1.5+*).
 
-[![Website http://perso.crans.org/besson/](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/besson/)
+[![Website https://perso.crans.org/besson/](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](https://perso.crans.org/besson/)
 [![Made with Python v3.5.2+](https://img.shields.io/badge/Made%20with-Python-1f425f.svg)](https://www.python.org/)
 [![Made with Sphinx v1.5.1+](https://img.shields.io/badge/Made%20with-Sphinx-1f425f.svg)](http://sphinx-doc.org/)
 
@@ -15,7 +15,7 @@ I recently switched to a much cleaner theme, based on [alabaster](http://alabast
 [![Ask Me Anything!](https://img.shields.io/badge/Ask%20me-anything-1abc9c.svg)](https://bitbucket.org/lbesson/ama)
 
 ## Where are those pages ?
-⟹ On [http://perso.crans.org/besson/](<http://perso.crans.org/besson/> "Check this one !").   [![Website perso.crans.org](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](http://perso.crans.org/)
+⟹ On [https://perso.crans.org/besson/](<https://perso.crans.org/besson/> "Check this one !").   [![Website perso.crans.org](https://img.shields.io/website-up-down-green-red/http/perso.crans.org.svg)](https://perso.crans.org/)
 
 ## Demos
 - In English:
@@ -37,12 +37,12 @@ and also a **complete** Python distribution, used with `python.opt.js` to embed 
 ----
 
 ### Author
-© [Lilian Besson](http://perso.crans.org/besson/), [2011-2017](https://bitbucket.org/lbesson/web-sphinx/commits/).
+© [Lilian Besson](https://perso.crans.org/besson/), [2011-2017](https://bitbucket.org/lbesson/web-sphinx/commits/).
 
 ### Languages
  * the [reStructuredText](http://docutils.sourceforge.net/rst.html) plain text markup language, mainly, for the content of the pages,
  * [Jinja](http://sphinx-doc.org/templating.html#jinja-sphinx-templating-primer) [templates](.templates/) (for changing appearance of the web pages),
- * [Javascript](https://en.wikipedia.org/wiki/Javascript) in the [`.static/`](.static/) folder,  for some interactive stuff on the web-pages. See [this page for some details](http://perso.crans.org/besson/js.html),
+ * [Javascript](https://en.wikipedia.org/wiki/Javascript) in the [`.static/`](.static/) folder,  for some interactive stuff on the web-pages. See [this page for some details](https://perso.crans.org/besson/js.html),
  * [CSS](https://en.wikipedia.org/wiki/CSS) in the [`.static/`](.static/) folder, for an improved style, based on the (old) default Sphinx style,
  * [HTML](https://en.wikipedia.org/wiki/HTML) (to include a few web components in some pages),
  * [Python](https://www.Python.org/) (for Sphinx configuration, [`conf.py`](conf.py) file).
@@ -71,17 +71,17 @@ This project use the following software:
     * [youtube](https://bitbucket.org/birkenfeld/sphinx-contrib/src/default/youtube/);
 
  * these [Python packages, from PyPI](https://pypi.python.org/): [ansicolortags](https://pypi.python.org/pypi/ansicolortags/), [sphinx_pyreverse](https://pypi.python.org/pypi/sphinx_pyreverse/), [sphinx_git](https://pypi.python.org/pypi/sphinx_git/), [sphinx_tabs](https://pypi.python.org/pypi/sphinx_tabs/). Install them with `sudo pip install ansicolortags sphinx_pyreverse sphinx_git sphinx_tabs`;
- * *Optional:* GnuPlot (but *not* GNU Octave), only for [these embedded examples](http://perso.crans.org/besson/gnuplot_embed.html);
- * *Optional:* GraphViz and Dot graph (`dot`), only for [these embedded examples](http://perso.crans.org/besson/graph.fr.html);
- * *Optional:* Ocaml, only for [these embedded examples](http://perso.crans.org/besson/runblock.en.html#adding-support-for-another-language-ocaml).
+ * *Optional:* GnuPlot (but *not* GNU Octave), only for [these embedded examples](https://perso.crans.org/besson/gnuplot_embed.html);
+ * *Optional:* GraphViz and Dot graph (`dot`), only for [these embedded examples](https://perso.crans.org/besson/graph.fr.html);
+ * *Optional:* Ocaml, only for [these embedded examples](https://perso.crans.org/besson/runblock.en.html#adding-support-for-another-language-ocaml).
 
 
 To install all these dependencies, use [brew](https://brew.sh/) on Mac OS, or your package manager on Linux/UNIX.
 
-## License [![GPLv3 license](https://img.shields.io/badge/License-GPLv3-blue.svg)](http://perso.crans.org/besson/LICENSE.html)
+## License [![GPLv3 license](https://img.shields.io/badge/License-GPLv3-blue.svg)](https://perso.crans.org/besson/LICENSE.html)
 This project is released under the **GPLv3 license**, for more details,
-take a look at the [LICENSE file](http://perso.crans.org/besson/LICENSE.html) in the source.
-© Lilian Besson, 2012-2018.
+take a look at the [LICENSE file](https://perso.crans.org/besson/LICENSE.html) in the source.
+© Lilian Besson, 2012-2024.
 
 *Basically, that allow you to use all or part of the project for you own business.*
 
