--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -11,11 +11,11 @@
 {% block doctype %}<!DOCTYPE html>{% endblock %}
 
 {% block extrahead %}
-<!-- This page is © Lilian Besson, 2011-2021.
-    I'm a professor of computer science, at ENS Rennes in France.
-    PhD in Reinforcement Learning (Mathematics and Computer Science) in 2019, from Centrale-Supelec Rennes and Inria Lille.
+<!-- This page is © Lilian Besson, 2011-2025.
+    I'm a professor of computer science and mathematics, at Lycée Kléber in Strasbourg, France.
+    I've a PhD in Reinforcement Learning (Mathematics and Computer Science) since 2019, from Centrale-Supelec Rennes and Inria Lille.
     This page is part of my personal web pages, generated with Sphinx.
-    Those pages are hosted on the Crans network, http://perso.crans.org/besson; -->
+    Those pages are hosted on the Crans network, https://perso.crans.org/besson; -->
 
     <link rel="stylesheet" href="{{ pathto('_static/hacks.min.css', true)|e }}" />
     <link rel="stylesheet" href="{{ pathto('_static/fonts.min.css', true)|e }}" />
@@ -27,6 +27,7 @@
     <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking,teaching,India,Hyderabad,Mahindra,Ecole Centrale,Mahindra Ecole Centrale,MEC,ECP,Ecole Centrale Paris,Spyder,CS101,MA101,MA102,jarvis,IPython,Professor,Professeur,Teacher,Teaching assistant,Enseignement,Enseignant,Colles,TP,TD,Lakanal,MP,Prépa,Colleur,Mr Besson,EPFL,LIB,BIG,splines,Rennes,Centrale-Supelec,ENS Rennes,ENS de Rennes,Lille,Inria,VisualStudio Code" />
 
     <!-- scrollUp jQuery plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
+    <script type="text/javascript" src="{{ pathto('_static/jquery.js', true)|e }}"></script>
     <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
     <script type="text/javascript">
         // Put all "embedded" script into a $(document).ready(function() {... });
